# prusti-dev

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Cargo.toml.old  Dockerfile  LICENSE  Makefile  Questions.md  README.md  SIFExtendedTransformer.scala  Vagrantfile  benchmark_silicon.py  benchmarked-files.csv  benchmarks.csv  bors.toml  build.rs  compare-performance.sh  false.rs.vpr.bad  flake.nix  index.html  leftpad.vpr  len.rs  o  playground.service  prusti-filter-results.json  refute.vpr  rust-toolchain  setup.sh  shell.nix  sll_const.rs  sll_const.vpr  sll_reborrow.vpr  sll_shared.rs  sll_shared.vpr  (+8 more)
analysis/: Cargo.toml  README.md  clippy.toml
analysis/src/: abstract_state.rs  analysis.rs  analysis_error.rs  analyzer.rs  lib.rs  mir_utils.rs  pointwise_state.rs  serialization_utils.rs
analysis/tests/: runner.rs  test_accessibility.rs  test_analysis.rs  test_coupling.rs  utils.rs
jni-gen/: .gitignore  .travis.yml  Cargo.toml  README.md
jni-gen/builtins/: mod.rs  utils.rs
jni-gen/src/: class_name.rs  errors.rs  lib.rs  module_tree.rs  unordered_set_eq.rs  utils.rs  wrapper_generator.rs  wrapper_spec.rs
jni-gen/systest/: Cargo.toml  build.rs
micromir/: Cargo.toml
micromir/src/: lib.rs
micromir/tests/: top_crates.rs
mir-state-analysis/: Cargo.toml
mir-state-analysis/src/: lib.rs
mir-state-analysis/tests/: top_crates.rs
native-verifier/: Cargo.toml
native-verifier/src/: fol.rs  lib.rs  main.rs  optimization.rs  smt_lib.rs  theory_provider.rs  verifier.rs
new/: CONTRIBUTING.md  Cargo.toml  x.py
new/parse/: implies.rs  implies.stdout  parse_err.stderr
new/prusti/: Cargo.toml
new/prusti-contracts/: Cargo.toml
new/prusti-contracts-impl/: Cargo.toml
new/prusti-contracts-internal/: Cargo.toml
new/prusti-contracts-test/: Cargo.toml
new/prusti-filter/: Cargo.toml  README.md
new/prusti-interface/: Cargo.toml
new/prusti-specs/: Cargo.toml
new/prusti-viper/: Cargo.toml
new/viper-sys/: Cargo.toml  README.md
prusti/: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  anlyse.py  bench.csv  benchmark.py  build.rs  test.rs
prusti-common/: Cargo.toml  README.md
prusti-common/src/: config.rs  driver_utils.rs  lib.rs  stopwatch.rs  verification_context.rs  verification_service.rs  verifier.rs
prusti-contracts/: Cargo.toml  LICENSE  Prusti.toml  README.md
prusti-contracts-build/: Cargo.toml  build.rs
prusti-contracts-build/src/: contracts.rs  lib.rs
prusti-contracts/prusti-contracts/: Cargo.toml  Prusti.toml  README.md
prusti-contracts/prusti-contracts-internal/: Cargo.toml
prusti-contracts/prusti-contracts-proc-macros/: Cargo.toml  Prusti.toml  README.md
prusti-contracts/prusti-contracts-std/: Cargo.toml
prusti-contracts/prusti-contracts-test/: Cargo.toml
prusti-contracts/prusti-specs/: Cargo.toml  README.md
prusti-contracts/prusti-std/: Cargo.toml  Prusti.toml  README.md
prusti-contracts/prusti-utils-small/: Cargo.toml  README.md
prusti-contracts/src/: ghost.rs  internal.rs  lib.rs
prusti-contracts/tests/: test.rs
prusti-encoder/: Cargo.toml
prusti-encoder/src/: lib.rs
prusti-filter/: .gitignore  Cargo.toml  README.md
prusti-filter/crates/: .gitignore  download.sh  log.csv
prusti-filter/rosetta/: results.json  tasks.json
prusti-filter/script/: analyse-results.py  analyze-evaluation.sh  cargo-build.sh  check-rosetta.py  coarse-grained-evaluation.sh  collect-results.py  compile-crates.sh  download-top-500.sh  download.py  evaluate-all-crates.sh  evaluate-crate.sh  filter-crates.sh  fine-grained-evaluation.sh  full-evaluation.sh  read-verification-time.sh  rustc.sh  select-popular-crates.py  verify-all-supported-crates.sh  verify-crates-coarse-grained.sh  verify-crates-fine-grained.sh  verify-supported.sh  whitelist-crates.sh
prusti-filter/src/: cargo_prusti_filter.rs  crate_visitor.rs  driver.rs  lib.rs  prusti_filter.rs  validators.rs
prusti-filter/tests/: test.rs
prusti-interface/: .travis.yml  Cargo.toml  README.md  clippy.toml
prusti-interface/src/: ast_builder.rs  cargo.rs  config.rs  constants.rs  data.rs  globals.rs  lib.rs  parser.rs  prusti_error.rs  report.rs  specifications.rs  sysroot.rs  trait_register.rs  utils.rs  verifier.rs
prusti-launch/: Cargo.toml  README.md
prusti-launch/src/: lib.rs  prusti_rustc.rs  prusti_server.rs
prusti-launch/tests/: test_binaries.rs
prusti-new/: CONTRIBUTING.md  Cargo.toml  rust-toolchain  test.rs
prusti-server/: Cargo.toml  README.md
prusti-server/src/: backend.rs  cache.rs  client.rs  driver.rs  jni_utils.rs  job.rs  lib.rs  main.rs  process_verification.rs  program_submitter.rs  prusti_server.rs  server.rs  server_message.rs  service.rs  verification_request.rs  verifier_runner.rs  verifier_thread.rs
prusti-server/tests/: basic_requests.rs  server_executable.rs
prusti-smt-solver/: Cargo.toml
prusti-smt-solver/src/: analyzer.rs  context.rs  error.rs  parser.rs  solver.rs  state.rs  subprocess.rs  types.rs
prusti-specs/: Cargo.toml
prusti-specs/src/: common.rs  export_spec_rewriter.rs  extensions.rs  extern_spec_rewriter.rs  lib.rs  parse_closure_macro.rs  parse_quote_spanned.rs  predicate.rs  print_counterexample.rs  rewriter.rs  spec_attribute_kind.rs  user_provided_type_params.rs
prusti-tests/: .rustfmt.toml  Cargo.toml  README.md
prusti-tests/tests/: cargotest.rs  test.rs  (+2 more)
prusti-tools/: Cargo.toml  README.md
prusti-utils/: Cargo.toml  README.md
prusti-viper/: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
task-encoder/: Cargo.toml
test-crates/: Cargo.toml  README.md  cargo-prusti.sh  compile-crates.sh  core-evaluation.sh  crates.csv  download-crate-info.py  download-top-3.sh  download-top-50.sh  download-top-500.sh  no-panic.csv  no_panic.csv  no_panic_crates.csv  set-cargo-lock.sh  successful_crates.csv  verify-crates.sh
testcrate/: Cargo.toml  build.rs
viper/: .gitignore  .travis.yml  Cargo.toml  README.md
viper-sys/: .travis.yml  Cargo.toml  README.md  build.rs
vir-gen/: Cargo.toml
vir-generate/: Cargo.toml
(+72900 files in other folders)
