[workspace]
members = [
    "analysis",
    "prusti",
    "prusti-contracts-build",
    "prusti-tests",
    "prusti-common",
    "prusti-utils",
    "tracing",
    "prusti-interface",
    "prusti-viper",
    "prusti-server",
    "prusti-launch",
    "prusti-smt-solver",
    "prusti-rustc-interface",
    "smt-log-analyzer",
    "test-crates",
    "viper",
    "viper-sys",
    "vir",
    "vir-gen",
    "jni-gen",
    "jni-gen/systest",
]
exclude = [
    "docs/dummy"
]
resolver = "2"

[profile.dev]
debug = 1

[profile.test]
debug = 1

[profile.release]
# Enable after fixing https://github.com/viperproject/prusti-dev/issues/383
# lto = true
codegen-units = 1
# Enable when profiling
# debug = true
