[workspace]
members = [
    #"analysis",
    "prusti",
    "prusti-common",
    "prusti-contracts-build",
    "prusti-encoder",
    # "prusti-tests",
    "prusti-utils",
    "tracing",
    "mir-state-analysis",
    "mir-ssa-analysis",
    "prusti-interface",
    # "prusti-server",
    "prusti-launch",
    "prusti-smt-solver",
    "prusti-rustc-interface",
    "smt-log-analyzer",
    "task-encoder",
    "test-crates",
    # "viper",
    # "viper-defs",
    "vir",
    "vir-proc-macro",
]
resolver = "2"

[profile.dev]
debug = 1

[profile.test]
debug = 1

[profile.release]
# Enable after fixing https://github.com/viperproject/prusti-dev/issues/383
# lto = true
# codegen-units = 1
# Enable when profiling
# debug = true
