[package]
name = "analysis"
version = "0.1.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
compiletest_rs = "0.7.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
