[package]
name = "analysis"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
syn = { version = "1.0", features = [ "full", "parsing" ] }
derive_more = "0.99"
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
tracing = { path = "../tracing" }

[dev-dependencies]
compiletest_rs = "0.10"
glob = "0.3"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
