[package]
name = "jni-gen"
version = "0.1.0"
description = "Generator of Rust bindings to Java classes"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
log = "0.4"
error-chain = "0.11.0"
jni = { version = "=0.10.1", features = ["backtrace", "invocation"] }

[badges]
travis-ci = { repository = "viperproject/jni-gen", branch = "master" }
