[package]
name = "jni-gen"
version = "0.1.0"
description = "Generator of Rust bindings to Java classes"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
error-chain = "0.12.0"
jni = { version = "0.19", features = ["invocation"] }
