[package]
name = "jni-gen"
version = "0.1.0"
description = "Generator of Rust bindings to Java classes"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
error-chain = "0.12.0"
jni = { version = "0.20", features = ["invocation"] }
tempfile = "3"
rustc-hash = "1.1.0"
tracing = { path = "../tracing" }