[package]
name = "micromir"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
derive_more = "0.99"
tracing = { path = "../tracing" }
analysis = { path = "../analysis" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
