[package]
name = "mir-state-analysis"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
derive_more = "0.99"
tracing = { path = "../tracing" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
dot = "0.1"
# TODO: remove
prusti-interface = { path = "../prusti-interface" }

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
