[package]
name = "native-verifier"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
error-chain = "0.12"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
prusti-common = { path = "../prusti-common" }
backend-common = { path = "../backend-common" }
prusti-utils = { path = "../prusti-utils" }
vir = { path = "../vir" }
lazy_static = "1.4"
regex = "1.7.1"