[workspace]
members = [
    "prusti",
    "prusti-contracts",
    "prusti-contracts-impl",
    "prusti-contracts-internal",
    "prusti-specs",
    "prusti-env-utils",
    "prusti-macros",
    "prusti-interface",
    "prusti-viper",
    "prusti-filter",
    "viper",
    "viper-sys",
]

exclude = [
    "prusti-contracts-test",
]
