[package]
name = "prusti-common"
version = "0.1.0"
authors = ["Julian Dunskus <julian.dunskus@gmail.com>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
viper = { path = "../viper" }
vir = { path = "../vir" }
prusti-launch = { path = "../prusti-launch" }
config = "0.13"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.5"
prusti-utils = { path = "../prusti-utils" }
fxhash = "0.2.1"
