[package]
name = "prusti-common"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
prusti-utils = { path = "../prusti-utils" }
viper = { path = "../viper" }
vir = { path = "../vir" }
log = { version = "0.4", features = ["release_max_level_info"] }
config = "0.13"
itertools = "0.11"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
uuid = { version = "1.0", features = ["v4"] }
rustc-hash = "1.1.0"
tracing = { path = "../tracing" }
