[package]
name = "prusti-contracts-build"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"

[build-dependencies]
prusti-utils = { path = "../prusti-utils" }
prusti = { path = "../prusti", artifact = "bin" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
