[package]
name = "prusti-contracts"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"

[dependencies]
prusti-contracts-impl = { path = "../prusti-contracts-impl" }
prusti-contracts-internal = { path = "../prusti-contracts-internal", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
# Are we being compiled by Prusti and should include dependency on
# prusti-contracts-internal?
prusti = ["prusti-contracts-internal"]
