[workspace]
members = [
    "prusti-contracts",
    "prusti-contracts-proc-macros",
    "prusti-specs",
    "prusti-std",
]
resolver = "2"

# This should not be built as part of Prusti (instead being build by `prusti-contracts-build`)
# It would require setting the `build.rustc-wrapper` in a `../.cargo/config.toml` correctly
# But it's unclear how to figure out if we're doing a debug or release build there

[profile.release]
codegen-units = 1
