[package]
name = "prusti-encoder"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
task-encoder = { path = "../task-encoder" }

bumpalo = { version = "3.12.0", features = ["collections"] }
once_cell = "1.17.0"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
