[package]
name = "prusti-filter"
version = "0.1.0"
license = "MPL-2.0"
authors = []

[lib]
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "prusti-filter-driver"
path = "src/driver.rs"
test = false
doctest = false

[[bin]]
name = "prusti-filter"
path = "src/prusti_filter.rs"
test = false
doctest = false

[[bin]]
name = "cargo-prusti-filter"
path = "src/cargo_prusti_filter.rs"
test = false
doctest = false

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.5.13"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
prusti-interface = { path = "../prusti-interface" }
prusti-common = { path = "../prusti-common" }
walkdir = "2"

[dev-dependencies]
compiletest_rs = { git = "https://github.com/fpoli/compiletest-rs.git", branch="with-exit-code-101" }
