[package]
name = "prusti-filter"
version = "0.1.0"
license = "MPL-2.0"
authors = []

[lib]
path = "src/lib.rs"
test = false
doctest = false

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.5.13"
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
prusti-interface = { path = "../prusti-interface" }
prusti-common = { path = "../prusti-common" }
walkdir = "2"

[dev-dependencies]
# compiletest_rs = { git = "https://github.com/fpoli/compiletest-rs.git", branch="with-exit-code-101" }
compiletest_rs = "0.5.0"
