[package]
name = "prusti-interface"
version = "0.1.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
description = "Interface between prusti and prusti-viper"
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
prusti-specs = { path = "../prusti-specs" }
prusti-common = { path = "../prusti-common" }
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4.0"
polonius = "0.3.0"
polonius-engine = "0.12.1"
csv = "1"
serde = "1.0"
serde_derive = "1.0"
regex = "1.3.9"
config = "0.10.1"
rustc-hash = "1.1.0"
datafrog = "2.0.1"

[dev-dependencies]
env_logger = "0.7.1"
