[package]
name = "prusti-interface"
version = "0.1.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
description = "Interface between prusti and prusti-viper"
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
analysis = { path = "../analysis" }
prusti-specs = { path = "../prusti-specs" }
prusti-common = { path = "../prusti-common" }
prusti-utils = { path = "../prusti-utils" }
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4.0"
csv = "1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
config = "0.11"
rustc-hash = "1.1.0"
datafrog = "2.0.1"
vir = { path = "../vir" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
