[package]
name = "prusti-interface"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
description = "Interface between prusti and prusti-viper"
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
#analysis = { path = "../analysis" }
# It would be nice to remove this dependency, be careful however that
# this would prevent this crate from being checked with `cargo clippy`!
prusti-specs = { path = "../prusti-contracts/prusti-specs" }
prusti-common = { path = "../prusti-common" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
tracing = { path = "../tracing" }
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4.0"
csv = "1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7"
config = "0.13"
rustc-hash = "1.1.0"
datafrog = "2.0.1"
# vir = { path = "../vir" }
version-compare = "0.1"
mir-state-analysis = { path = "../mir-state-analysis" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
