[package]
name = "prusti-launch"
version = "0.1.0"
authors = ["Julian Dunskus <julian.dunskus@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "prusti-rustc"
test = false # we have no unit tests
doctest = false # and no doc tests

[[bin]]
name = "cargo-prusti"
test = false
doctest = false

[[bin]]
name = "prusti-server"
test = false
doctest = false

[dependencies]
walkdir = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ctrlc = "3.1"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[dev-dependencies]
glob = "0.3"
