[package]
name = "prusti-launch"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[[bin]]
name = "prusti-rustc"
test = false # we have no unit tests
doctest = false # and no doc tests

[[bin]]
name = "cargo-prusti"
test = false
doctest = false

[[bin]]
name = "prusti-server"
test = false
doctest = false

[dependencies]
prusti-utils = { path = "../prusti-utils" }

[dev-dependencies]
glob = "0.3"
