[package]
name = "prusti"
version = "0.2.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2018"
default-run = "prusti"

[lib]
test = true # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "prusti"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
env_logger = "0.7.1"
prusti-contracts-internal = { path = "../prusti-contracts-new" }

[build-dependencies]
cargo_metadata = "0.10.0"