[package]
name = "prusti-server"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
license = "MPL-2.0"
description = "Server-side logic & handling for Prusti"

[lib]
test = true # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "prusti-server-driver"
path = "src/driver.rs"
test = false
doctest = false

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
viper = { path = "../viper" }
viper-sys = { path = "../viper-sys" }
prusti-common = { path = "../prusti-common" }
env_logger = "0.9"
clap = { version = "3.2", features = ["derive"] }
bincode = "1.0"
url = "2.2.2"
num_cpus = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
warp = "0.3"
tokio = "1.20"
jni = { version = "0.19", features = ["invocation"] }
# the tungstenite version used by warp 0.3
tokio-tungstenite = "0.13"
futures = "0.3.25"
futures-util = "0.3.25"
async-stream = "0.3.3"
once_cell = "1.17.0"

[dev-dependencies]
lazy_static = "1.4.0"
