[package]
name = "prusti-server"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
license = "MPL-2.0"
description = "Server-side logic & handling for Prusti"

[lib]
test = true # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "prusti-server-driver"
path = "src/driver.rs"
test = false
doctest = false

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
viper = { path = "../viper" }
prusti-common = { path = "../prusti-common" }
prusti-utils = { path = "../prusti-utils" }
native-verifier = { path = "../native-verifier" }
backend-common = { path = "../backend-common" }
tracing = { path = "../tracing" }
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.0"
url = "2.2.2"
num_cpus = "1.14"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
tokio = "1.20"
rustc-hash = "1.1.0"
once_cell = "1.17.1"

[dev-dependencies]
lazy_static = "1.4.0"
