[package]
name = "prusti-smt-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prusti-smt-solver"
path = "src/solver.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[[bin]]
name = "prusti-log-analyzer"
path = "src/analyzer.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
csv = "1.1.6"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes", "unstable"]