[package]
name = "prusti-smt-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prusti-smt-solver"
path = "src/solver.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
futures = "0.3"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes", "unstable"]