[package]
name = "prusti-tests"
version = "0.2.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
edition = "2021"

[dev-dependencies]
compiletest_rs = "0.8.0"
prusti-server = { path = "../prusti-server" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
prusti = { path = "../prusti", artifact = "bin" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git", rev = "17f8088" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
