[package]
name = "prusti-tests"
version = "0.2.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dev-dependencies]
compiletest_rs = "0.9"
prusti-server = { path = "../prusti-server" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
prusti = { path = "../prusti", artifact = "bin" }
prusti-utils = { path = "../prusti-utils"}
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git", rev = "17f8088" }
ureq = "2.1"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
ui_test = "0.11.7"
tempfile = "3.6.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
