[package]
name = "prusti-tests"
version = "0.2.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dev-dependencies]
compiletest_rs = "0.10"
prusti-server = { path = "../prusti-server" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
prusti = { path = "../prusti", artifact = "bin" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git", rev = "ec8a8a0" }
ureq = "2.1"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
