[package]
name = "prusti-tools"
version = "0.1.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[[bin]]
name = "prusti-rustc"
test = false
path = "src/prusti_rustc.rs"

[[bin]]
name = "cargo-prusti"
test = false
path = "src/cargo_prusti.rs"

[dependencies]
walkdir = "2"
