[package]
name = "prusti-viper"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
description = "Translation of MIR into Viper"
readme = "README.md"
license = "MPL-2.0"

[lib]
doctest = false # we have no doc tests

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
viper = { path = "../viper" }
prusti-interface = { path = "../prusti-interface" }
prusti-common = { path = "../prusti-common" }
prusti-server = { path = "../prusti-server" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
vir-crate = { package = "vir", path = "../vir" }
num-traits = "0.2"
regex = "1.7"
serde = "1.0"
serde_json = "1.0"
backtrace = "0.3"
rustc-hash = "1.1.0"
derive_more = "0.99.16"
itertools = "0.10.3"

[dev-dependencies]
lazy_static = "1.4"
diffy = "0.3"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
