[package]
name = "prusti"
version = "0.2.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"

[[bin]]
name = "prusti-driver"
path = "src/driver.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
env_logger = "0.9"
prusti-contracts = { path = "../prusti-contracts", features = ["prusti"] }
prusti-specs = { path = "../prusti-specs" }
prusti-interface = { path = "../prusti-interface" }
prusti-viper = { path = "../prusti-viper" }
prusti-common = { path = "../prusti-common" }
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.5"
lazy_static = "1.4.0"

[build-dependencies]
chrono = "0.4"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
