[package]
name = "prusti"
version = "0.2.1"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[[bin]]
name = "prusti-driver"
path = "src/driver.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
env_logger = "0.10"
prusti-interface = { path = "../prusti-interface" }
prusti-viper = { path = "../prusti-viper" }
prusti-common = { path = "../prusti-common" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
prusti-pcs = { path = "../prusti-pcs" }
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4.0"

[build-dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
