[package]
name = "prusti"
version = "0.2.2"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[[bin]]
name = "prusti-driver"
path = "src/driver.rs"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
env_logger = "0.10"
prusti-interface = { path = "../prusti-interface" }
# prusti-viper = { path = "../prusti-viper" }
prusti-common = { path = "../prusti-common" }
prusti-encoder = { path = "../prusti-encoder" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4.0"
tracing = { path = "../tracing" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"
mir-state-analysis = { path = "../mir-state-analysis" }

#viper = { path = "../viper" }

[build-dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[features]
vir_debug = ["prusti-encoder/vir_debug"]
