[package]
name = "task-encoder"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
description = "Definition of a general task encoder interface"
readme = "README.md"
license = "MPL-2.0"

[lib]
test = false # no unit tests
doctest = false # no doc tests

[dependencies]
# once_cell = "1.17.0"
# rustc-hash = "1.1.0"
hashlink = "0.8.1"
