[package]
name = "test-crates"
version = "0.1.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
edition = "2018"

[dependencies]
prusti-launch = { path = "../prusti-launch" }
prusti = { path = "../prusti" }
color-backtrace = "0.5"
rustwide = "0.14.0"
env_logger = "0.9"
log = "0.4.14"
csv = "1.1.5"
serde = "1.0"
toml = "0.5.8"
glob = "0.3.0"