[package]
name = "test-crates"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
prusti = { path = "../prusti", artifact = "bin" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
color-backtrace = "0.6"
rustwide = "0.16"
env_logger = "0.10"
log = "0.4"
csv = "1.1.5"
serde = "1.0"
toml = "0.7"
glob = "0.3.0"
clap = { version = "4.0", features = ["derive"] }
failure = "0.1"
