[package]
name = "testcrate"
version = "0.1.0"
build = "build.rs"

[build-dependencies]
jni-gen = { path = ".." }
error-chain = "0.11.0"
env_logger = "0.4.3"

[dependencies]
error-chain = "0.11.0"
jni = { git = "https://github.com/prevoty/jni-rs.git", branch = "invocation_api", features = ["backtrace", "invocation"] }
