[package]
name = "viper-sys"
version = "0.1.0"
description = "Low-level interface to Viper"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
build = "build.rs"

[build-dependencies]
jni-gen = { path = "../jni-gen" }
error-chain = "0.12.0"
env_logger = "0.8.2"
ureq = "1.0.0"
tempdir = "0.3.5"

[dependencies]
error-chain = "0.12.0"
env_logger = "0.8.2"
jni = { version = "0.17.0", features = ["backtrace", "invocation"] }
log = { version = "0.4", features = ["release_max_level_info"] }
