[package]
name = "viper-sys"
version = "0.1.0"
description = "Low-level interface to Viper"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"

[build-dependencies]
jni-gen = { path = "../jni-gen" }
error-chain = "0.12.0"
env_logger = "0.9"
ureq = "2.1"
tempdir = "0.3.5"

[dependencies]
error-chain = "0.12.0"
env_logger = "0.9"
jni = { version = "0.19", features = ["invocation"] }
log = { version = "0.4", features = ["release_max_level_info"] }
