[package]
name = "viper-sys"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
description = "Low-level interface to Viper"
readme = "README.md"
license = "MPL-2.0"
build = "build.rs"

[build-dependencies]
jni-gen = { path = "../jni-gen" }
error-chain = "0.12.0"
env_logger = "0.10"
ureq = "2.1"
tempfile = "3.3"

[dependencies]
error-chain = "0.12.0"
env_logger = "0.10"
jni = { version = "0.20", features = ["invocation"] }
log = { version = "0.4", features = ["release_max_level_info"] }
once_cell = "1.16"
