[package]
name = "viper"
version = "0.1.0"
description = "High-level interface to Viper"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
error-chain = "0.12"
viper-sys = { path = "../viper-sys" }
jni = { version = "0.19", features = ["invocation"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rustc-hash = "1.1.0"
tokio = "1.18"
futures = "0.3.21"
smt-log-analyzer = {path = "../smt-log-analyzer"}

[dev-dependencies]
lazy_static = "1.4"
env_logger = "0.9"
bencher = "0.1"

[[bench]]
name = "bench_program"
harness = false
