[package]
name = "viper"
version = "0.2.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
description = "High-level interface to Viper"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug"] }
duchess = { git = "https://github.com/duchess-rs/duchess.git", rev = "6b8e7f6" }
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1.0"
smt-log-analyzer = { path = "../smt-log-analyzer"}
tracing = { path = "../tracing" }

[dev-dependencies]
lazy_static = "1.4"
env_logger = "0.10"
bencher = "0.1"

[[bench]]
name = "bench_program"
harness = false
