[package]
name = "viper"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
description = "High-level interface to Viper"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug"] }
error-chain = "0.12"
viper-sys = { path = "../viper-sys" }
backend-common = { path = "../backend-common" }
jni = { version = "0.20", features = ["invocation"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rustc-hash = "1.1.0"
tokio = { version = "1.20", features = ["io-util", "net", "rt", "sync"] }
futures = "0.3.21"
smt-log-analyzer = { path = "../smt-log-analyzer"}
prusti-utils = { path = "../prusti-utils"}
tracing = { path = "../tracing" }

[dev-dependencies]
lazy_static = "1.4"
env_logger = "0.10"
bencher = "0.1"

[[bench]]
name = "bench_program"
harness = false
